@@ -5,7 +5,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -17,6 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.clubconnect.clubconnect_backend.club.ClubService;
 import com.clubconnect.clubconnect_backend.user.User;
 import com.clubconnect.clubconnect_backend.user.UserService;
 
@@ -26,20 +26,26 @@ public class EventController {
 
     private final EventService eventService;
     private final UserService userService;
+    private final ClubService clubService;
 
     @Autowired
-    public EventController(EventService eventService, UserService userService) {
+    public EventController(EventService eventService, UserService userService, ClubService clubService) {
         this.eventService = eventService;
         this.userService = userService;
+        this.clubService = clubService;
     }
 
     @PostMapping
     public ResponseEntity<EventDTO> createEvent(@RequestBody EventDTO eventDTO) {
+        // Pass EventDTO directly to the service layer
         Event createdEvent = eventService.createEvent(eventDTO);
+
+        // Convert the created Event entity to EventDTO for the response
         EventDTO responseDto = convertToDto(createdEvent);
-        return ResponseEntity.status(HttpStatus.CREATED).body(responseDto);
+        return ResponseEntity.ok(responseDto);
     }
-    
+
+            
     // Get all events
     @GetMapping
     public ResponseEntity<List<EventDTO>> getAllEvents() {
@@ -58,14 +64,10 @@ public class EventController {
 
     @PutMapping("/{id}")
     public ResponseEntity<EventDTO> updateEvent(@PathVariable Long id, @RequestBody EventDTO eventDTO) {
-        // Directly passing eventDTO to the service layer
         Event updatedEvent = eventService.updateEvent(id, eventDTO);
-        
-        // Converting the updated event back to DTO for response
         EventDTO responseDto = convertToDto(updatedEvent);
         return ResponseEntity.ok(responseDto);
     }
-
 
     // Delete an event
     @DeleteMapping("/{id}")
@@ -74,49 +76,49 @@ public class EventController {
         return ResponseEntity.noContent().build();
     }
 
+   // Search events by category
     @GetMapping("/search")
-    public ResponseEntity<List<EventDTO>> searchEventsByCategory(@RequestParam String category) {
+    public ResponseEntity<List<EventDTO>> searchEventsByCategory(@RequestParam("category") String category) {
         List<Event> events = eventService.findEventsByCategory(category);
-        List<EventDTO> eventDTOs = events.stream()
-                                         .map(this::convertToDto)
-                                         .toList();
+        List<EventDTO> eventDTOs = events.stream().map(this::convertToDto).collect(Collectors.toList());
         return ResponseEntity.ok(eventDTOs);
     }
 
-    //Convert Event entity to EventDTO
+
     private EventDTO convertToDto(Event event) {
         Set<Long> attendeeIds = event.getAttendees().stream().map(User::getId).collect(Collectors.toSet());
+        Set<String> tags = event.getTags(); // Assuming Event has a getTags() method
+    
         return new EventDTO(
-                event.getId(),
-                event.getTitle(),
-                event.getDescription(),
-                event.getDate(),
-                event.getLocation(),
-                event.getCategory(),
-                attendeeIds
+            event.getId(),
+            event.getTitle(),
+            event.getDescription(),
+            event.getDate(),
+            event.getLocation(),
+            event.getCategory(),
+            attendeeIds,
+            event.getClub() != null ? event.getClub().getId() : null,
+            tags
         );
     }
-
-    // Convert EventDTO to Event entity
-    // private Event convertToEntity(EventDTO eventDTO) {
-    //     Event event = new Event();
-    //     event.setId(eventDTO.getId());
-    //     event.setTitle(eventDTO.getTitle());
-    //     event.setDescription(eventDTO.getDescription());
-    //     event.setDate(eventDTO.getDate());
-    //     event.setLocation(eventDTO.getLocation());
-    //     event.setCategory(eventDTO.getCategory());
-
-    //     if (eventDTO.getAttendeeIds() != null) {
-    //         Set<User> attendees = eventDTO.getAttendeeIds().stream()
-    //                 .map(userService::getUserById) // Assuming getUserById fetches user by ID
-    //                 .collect(Collectors.toSet());
-    //         event.setAttendees(attendees);
-    //     } else {
-    //         event.setAttendees(new HashSet<>());
-    //     }
-
-    //     return event;
-    // }
-
+    
+    private Event convertToEntity(EventDTO eventDTO) {
+        Event event = new Event();
+        event.setId(eventDTO.getId());
+        event.setTitle(eventDTO.getTitle());
+        event.setDescription(eventDTO.getDescription());
+        event.setDate(eventDTO.getDate());
+        event.setLocation(eventDTO.getLocation());
+        event.setCategory(eventDTO.getCategory());
+        event.setTags(eventDTO.getTags());
+    
+        if (eventDTO.getAttendeeIds() != null) {
+            Set<User> attendees = eventDTO.getAttendeeIds().stream()
+                    .map(userService::getUserById)
+                    .collect(Collectors.toSet());
+            event.setAttendees(attendees);
+        }
+    
+        return event;
+    }
 }
